prevent resizable block extrude out of container

--- a/src/styl/page/basic.styl
+++ b/src/styl/page/basic.styl
@@ -91,6 +91,7 @@ i.fa-icon
 
 *[resizable='true'], *[resizable='resizable']
   padding: 20px
+  max-width: 100%
 
 @media(max-width:768px)
   .block-item > .inner
