--- a/static/css/pack/viewer.css
+++ b/static/css/pack/viewer.css
@@ -6997,6 +6997,7 @@ i.fa-icon {
 *[resizable='true'],
 *[resizable='resizable'] {
   padding: 20px;
+  max-width: 100%;
 }
 @media (max-width: 768px) {
   .block-item > .inner {
